Fix Xaero waypoint parsing and file discovery